syntax = "proto3";

option csharp_namespace = "GrpcServer";

package payroll;

service PayrollUploader {

  rpc UploadPayroll(stream PayrollChunk) returns (UploadStatus);

    rpc DownloadPayroll (FileRequest) returns (stream DownloadFileResponse);
}

message PayrollChunk {
  bytes data = 1;
  string file_name = 2; // Send once, then keep empty
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}

message FileRequest {
  string fileName = 1;
}

message FileChunk {
  bytes data = 1;
}

message FileMetadata {
  string fileName = 1;
  int64 fileSize = 2;
}

message DownloadFileResponse {
  oneof payload {
    FileMetadata metadata = 1;
    FileChunk chunk = 2;
  }
}